--- a/app/src/main/res/layout/home_screen.xml
+++ b/app/src/main/res/layout/home_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#DB1D2D81"
-    tools:context=".MainActivity">
+    tools:context=".HomeScreen">
 
     <TextView
         android:layout_width="wrap_content"
