--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -9,8 +9,8 @@
 
     <EditText
         android:id="@+id/usernameInput"
-        android:layout_width="215dp"
-        android:layout_height="33dp"
+        android:layout_width="209dp"
+        android:layout_height="36dp"
         android:layout_marginEnd="44dp"
         android:layout_marginRight="44dp"
         android:ems="10"
@@ -69,16 +69,19 @@
         android:text="Login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.691" />
 
     <Button
         android:id="@+id/button3"
         android:layout_width="172dp"
         android:layout_height="37dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="16dp"
         android:text="Create new account"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.46"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loginBtn" />
 
@@ -86,9 +89,10 @@
         android:id="@+id/button4"
         android:layout_width="165dp"
         android:layout_height="39dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="32dp"
         android:text="Forgot password?"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.455"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button3" />
 
