Fixed the buttons on the homepage and the login screen so they go to the correct screens when clicked.

--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -80,6 +80,7 @@
         android:layout_width="172dp"
         android:layout_height="37dp"
         android:layout_marginTop="16dp"
+        android:onClick="goToCreateAccount"
         android:text="Create new account"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.46"
