--- a/app/src/main/res/layout/helpful_links_screen.xml
+++ b/app/src/main/res/layout/helpful_links_screen.xml
@@ -3,6 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".HelpfulLinksScreen">
 
+    <Button
+        android:id="@+id/YoutubePlayBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Play" />
+
+    <view
+        android:id="@+id/YoutubePlay"
+        class="com.google.android.youtube.player.YouTubePlayerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
