Fixed the helpful links so the btn is in the right place, goes to therapy video, and added another video. Made all backgrounds a light blue Fixed the create account so has the proper layout when opened Couldn't figure out the issues with the Severity Test

--- a/app/src/main/res/layout/helpful_links_screen.xml
+++ b/app/src/main/res/layout/helpful_links_screen.xml
@@ -3,8 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#5BC6D8"
     android:orientation="vertical"
     tools:context=".HelpfulLinksScreen">
+
+    <view
+        android:id="@+id/YoutubePlay"
+        class="com.google.android.youtube.player.YouTubePlayerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/YoutubePlayBtn"
@@ -12,9 +19,25 @@
         android:layout_height="wrap_content"
         android:text="Play" />
 
-    <view
-        android:id="@+id/YoutubePlay"
-        class="com.google.android.youtube.player.YouTubePlayerView"
+    <com.google.android.youtube.player.YouTubePlayerView
+        android:id="@+id/YoutubePlay_2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/YoutubePlayBtn_2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Play" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+    </ScrollView>
+
 </LinearLayout>
