--- a/app/src/main/res/layout/journal.xml
+++ b/app/src/main/res/layout/journal.xml
@@ -5,6 +5,7 @@
     android:id="@+id/linearLayout3"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#5BC6D8"
     tools:context=".Journal">
 
     <Button
