--- a/app/src/main/res/layout/video_chat_screen.xml
+++ b/app/src/main/res/layout/video_chat_screen.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#5BC6D8"
     tools:context=".MainActivity">
 
     <TextView
