--- a/app/src/main/res/layout/severity_test_screen.xml
+++ b/app/src/main/res/layout/severity_test_screen.xml
@@ -12,6 +12,7 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="#FFFFFF"
         android:onClick="determine_input"
         android:text="Submit"
         app:layout_constraintBottom_toBottomOf="parent"
