--- a/app/src/main/res/layout/create_account_screen.xml
+++ b/app/src/main/res/layout/create_account_screen.xml
@@ -16,7 +16,7 @@
         android:text="Create Account"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="#090202"
+        android:textColor="#F8F5F5"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,6 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:text="Email: "
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="@+id/createEmail"
         app:layout_constraintEnd_toStartOf="@+id/createEmail"
         app:layout_constraintStart_toStartOf="parent" />
@@ -40,6 +41,7 @@
         android:layout_marginEnd="24dp"
         android:ems="10"
         android:inputType="textEmailAddress"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -49,6 +51,7 @@
         android:layout_height="14dp"
         android:layout_marginEnd="20dp"
         android:text="Username:"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="@+id/createUsername"
         app:layout_constraintEnd_toStartOf="@+id/createUsername"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,6 +66,7 @@
         android:layout_marginEnd="24dp"
         android:ems="10"
         android:inputType="textPersonName"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/createEmail" />
 
@@ -73,6 +77,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="12dp"
         android:text="Password:"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="@+id/createPassword"
         app:layout_constraintEnd_toStartOf="@+id/createPassword"
         app:layout_constraintStart_toStartOf="parent" />
@@ -85,6 +90,7 @@
         android:layout_marginEnd="24dp"
         android:ems="10"
         android:inputType="textPassword"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/createUsername"
@@ -95,6 +101,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="68dp"
+        android:background="#FFFFFF"
         android:text="Create Account"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
